<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_wsapp"
        android:orderInCategory="101"
        android:title="wsapp"
        android:icon="@drawable/ic_whatshot"
        android:iconTint="@color/white"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="102"
        android:title="@string/share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:orderInCategory="103"
        android:title="@string/more"
        app:showAsAction="never|collapseActionView" />

    <item
        android:id="@+id/action_rateus"
        android:orderInCategory="104"
        android:title="@string/rate_us"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="105"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>
